Integration html jean

--- a/choixdej/groupe/templates/groupe/confirmation.html
+++ b/choixdej/groupe/templates/groupe/confirmation.html
@@ -33,7 +33,7 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                             <a href="#">  <img src="/static/images/logo.png" width="" height="auto" alt="logo"/></a>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{% url 'accueil' %}">Accueil</a></li>
