--- a/choixdej/groupe/templates/groupe/creer.html
+++ b/choixdej/groupe/templates/groupe/creer.html
@@ -8,8 +8,7 @@
         <title>Index - ChoixDej</title>
 
         <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="/static/css/radiobutton.css" rel="stylesheet" type="text/css">
-        <link href="/static/css/styles.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/main.css" rel="stylesheet" type="text/css">
         <!-- Respond.js IE8 support of media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -31,7 +30,7 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                             <a href="#">  <img src="/static/images/logo.png" width="" height="auto" alt="logo"/></a>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{% url 'accueil' %}">Accueil</a></li>
