--- a/choixdej/index/templates/index/index.html
+++ b/choixdej/index/templates/index/index.html
@@ -20,7 +20,7 @@
     <body>
         <header>
 
-            <img src="/static/images/logo2.png" width="300" alt="logo" id="logo"/>
+            <img src="/static/images/logo.png" width="150" alt="logo" id="logo"/>
         </header>
 
 
@@ -29,19 +29,21 @@
               <form method="post" action="">
                 {% csrf_token %}
                 <div class="col-xs-12 col-md-12 connexion">
+                  <h1>Se connecter </h1>
                     <div class="form-group row">
-                       
+                       <label for="example-text-input" class="col-2 col-form-label">Identifiant / Mail</label>
                         <div class="col-10">
-                              <p>{{ form.username.errors }}
+                              <p><font size="3" color="black">{{ form.username.errors }}</font>
+
                               <input type="text" class="form-control" placeholder="Username" id= {{ form.username }}
                               <p class="help-block text-danger"></p>
                         </div>
                     </div>
 
                     <div class="form-group row">
-
+                      <label for="example-password-input" class="col-2 col-form-label">Mot de Passe</label>
                         <div class="col-10">
-                              <p>{{ form.password.errors }}
+                              <p><font size="3" color="black">{{ form.password.errors }}</font>
                               <input type="password" class="form-control" placeholder="Mot de passe" id= {{ form.password }}
                                 <p class="help-block text-danger"></p>
                         </div>
@@ -49,6 +51,7 @@
 
                       <input class="btn btn-info" type="submit" value="Se connecter" />
                       <a href="/inscription"><button type="button" class="btn btn-warning">Pas de compte ? Inscris toi ! </button></a>
+                    </br></br>
                       <a href="{% url 'password_reset' %}"><button type="button" class="btn btn-success">Mot de pass oublié... </button></a>
               </form>
 
