--- a/choixdej/ajout/templates/ajout/ajout.html
+++ b/choixdej/ajout/templates/ajout/ajout.html
@@ -33,7 +33,7 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                             <a href="#">  <img src="/static/images/logo.png" width="" height="auto" alt="logo"/></a>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{% url 'accueil' %}">Accueil</a></li>
@@ -49,14 +49,14 @@
        <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 ">
-                  <form class="container" id="form1" enctype="multipart/form-data" method="post" action=".">
+                  <h1 id="titre-resto"> Ajout du restaurant </h1>
+                  <form  id="form1" enctype="multipart/form-data" method="post" action=".">
                     {% csrf_token %}
-                    <h1 id="titre-resto"> Ajout du restaurant </h1>
                     <div class="form-group row">
                         <label for="example-text-input" class="col-2 col-form-label">Nom du restaurant</label>
                         <div class="col-10">
                           <p>{{ form.titre.errors }}<label for="{{form.titre.id_for_label}}"></label>
-                          <input class="form-control" placeholder="Mcdonalds" id="titre" type="text" name="titre" maxlength="100" /></p>
+                          <input class="form-control" placeholder="Mcdonalds" id="titre" type="text" name="titre" /></p>
                         </div>
                     </div>
                     <div class="form-group row">
