--- a/choixdej/home/templates/home/home.html
+++ b/choixdej/home/templates/home/home.html
@@ -31,7 +31,7 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                            <a href="#"> <img src="/static/images/logo.png" width="" height="auto" alt="logo"/></a>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/home">Accueil</a></li>
@@ -51,7 +51,7 @@
                       <img id="resto" src="{{ img.image.url }}" />
                       <br/>
                       <h1 id="nom-resto"> {{ img.nom_restaurant }} </h1>
-                      <h3 id="adresse-resto"> {{ img.adresse_restaurant }} </h3>
+                      <h3 id="nom-resto"> {{ img.adresse_restaurant }} </h3>
                     {% endfor %}
               </div>
           </div>
