--- a/choixdej/inscription/templates/inscription/inscription.html
+++ b/choixdej/inscription/templates/inscription/inscription.html
@@ -20,7 +20,7 @@
     <body>
         <header>
 
-            <img src="/static/images/logo2.png" width="300" alt="logo" id="logo"/>
+            <img src="/static/images/logo2.png" width="150" alt="logo" id="logo"/>
         </header>
 
 
@@ -33,14 +33,14 @@
                     <div class="form-group row">
                         <label for="example-text-input" class="col-2 col-form-label">Nom</label>
                         <div class="col-10">
-                            <p>{{ form.username.errors }}<label for="{{form.username.id_for_label}}"></label>
+                            <p><font size="3" color="black">{{ form.username.errors }}</font><label for="{{form.username.id_for_label}}"></label>
                             <input class="form-control" placeholder="Deschamps Frédéric" id="username" type="text" name="username" maxlength="100" /></p>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="example-email-input" class="col-2 col-form-label">Adresse mail</label>
                         <div class="col-10">
-                            <p>{{ form.email.errors }}<label for="{{form.email.id_for_label}}"></label>
+                            <p><font size="3" color="black">{{ form.email.errors }}</font><label for="{{form.email.id_for_label}}"></label>
                             <input class="form-control" placeholder="Ton adresse mail *" id="email" type="text" name="email" maxlength="100" /></p>
                         </div>
                     </div>
@@ -48,21 +48,23 @@
                         <label for="example-password-input" class="col-2 col-form-label">Mot de Passe</label>
                         {{ form.non_field_errors }}
                         <div class="col-10">
-                            <p>{{ form.password1.errors }}<label for="{{form.password1.id_for_label}}"></label>
+                            <p><font size="3" color="black">{{ form.password1.errors }}</font><label for="{{form.password1.id_for_label}}"></label>
                               <input class="form-control" placeholder="Ton mot de passe *" id="password1" type="password" name="password1" maxlength="100" /></p>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="example-password-input" class="col-2 col-form-label">Confirmation de mot de passe</label>
                         <div class="col-10">
-                            <p>{{ form.password2.errors }}<label for="{{form.password2.id_for_label}}"></label>
+                            <p><font size="3" color="black">{{ form.password2.errors }}</font><label for="{{form.password2.id_for_label}}"></label>
                             <input class="form-control" placeholder="Confirmation mot de passe *" id="password2" type="password" name="password2" maxlength="100" /></p>
                         </div>
                     </div>
                     <div class="form-group sub">
                         <input class="btn btn-info" type="submit" value="Envoyer !" />
+
                     </div>
                   </form>
+              </br>
                   <a href="/index"><button class="btn btn-warning"> Déjà un compte ? Connecte toi ! </button></a>
                 </div>
 
