--- a/choixdej/vote/templates/vote/vote.html
+++ b/choixdej/vote/templates/vote/vote.html
@@ -11,7 +11,7 @@
 
         <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="/static/css/jquery.rateyo.css"/>
-        <link href="/static/css/styles.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/main.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
         <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
         <!-- Respond.js IE8 support of media queries -->
@@ -37,7 +37,7 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                            <a href="#">  <img src="/static/images/logo.png" width="" height="auto" alt="logo"/></a>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{% url 'accueil' %}">Accueil</a></li>
